# kaldi-gop

./: .gitignore  README.md
egs/gop-compute/: path.sh
src/: CMakeLists.txt
